@@ -24,7 +24,7 @@
     <dt><label for="style">Style</label></dt>
     <dd><textarea id="style"></textarea></dd>
 </div>
-<div><button id="save">Save</button></div>
+<div><button id="save">Save</button><button id="show-default">Show default</button></div>
 <div id="message"></div>
 </body>
 </html>
